tests/smt2/error/as_error.smt2
(declare-sort S)
(declare-const a S)
(assert (as false S))
(assert ((as and S) true false))
(assert ((as and S) a false))